# open-dataset-cleaner

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  config.example.toml
.docs/: requirements.md
.github/workflows/: release.yml
scripts/: install.ps1  install.sh
src/: lib.rs  logging.rs  main.rs  pipeline.rs
src/checkpoint/: mod.rs
src/cli/: mod.rs  run.rs  validate.rs
src/config/: dedup.rs  extract.rs  filters.rs  input.rs  mod.rs  output.rs  plugins.rs  runtime.rs  scoring.rs  stats.rs
src/dedup/: exact.rs  minhash.rs  mod.rs
src/extract/: html.rs  mod.rs  validate.rs
src/filter/: mod.rs
src/input/: html.rs  jsonl.rs  mod.rs  text.rs  warc.rs
src/output/: jsonl.rs  mod.rs  parquet.rs
src/plugin/: mod.rs  wasm.rs
src/record/: mod.rs  outcome.rs
src/scoring/: char_ratio.rs  content_quality.rs  language.rs  mod.rs  perplexity.rs  text_quality.rs
src/stats/: histogram.rs  mod.rs
tests/: run_pipeline.rs
tests/fixtures/configs/: basic.toml  dedup.toml  html_markdown.toml  rules.toml
tests/fixtures/html/: sample.html
tests/fixtures/jsonl/: dedup.jsonl  sample.jsonl
tests/fixtures/plain/: sample.txt
tests/fixtures/plugins/: accept.wat  bad_output.wat  memory_hog.wat  reject.wat  timeout.wat
